# AudioApplication

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/rangaofei/audioapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Mp3Encoder.cpp  Mp3Encoder.h  OpenSLPlayer.cpp  OpenSLPlayer.h  WavTools.cpp  WavTools.h  audio_common.cpp  audio_common.h  audio_recorder.cpp  audio_recorder.h  buf_manager.h  mp3codec.cpp  native-lib.cpp  opensl_util.cpp  opensl_util.h  saka_log.h
app/src/main/cpp/lameutils/: lame_utils.h  mp3file_encoder.h
app/src/main/java/com/rangaofei/audioapplication/: ByteBufferUtil.java  ByteUtil.java  ContainerActivity.java  MainActivity.java
app/src/main/java/com/rangaofei/audioapplication/com/saka/ndk/: OpenSLUtil.java
app/src/main/java/com/rangaofei/audioapplication/fragment/: GLFragment.java  OpenSLRecordFragment.java  PCMFragment.java
app/src/main/java/com/rangaofei/audioapplication/opengles/: AirHockeyRender.java  ColorShaderProgram.java  Constants.java  GLModeRender.java  GLSurfaceActivity.java  Geometry.java  LoggerConfig.java  Mallet.java  MatrixHelper.java  ObjectBuilder.java  Puck.java  ShaderHelper.java  ShaderProgram.java  Table.java  TextResourceReader.java  TextureHelper.java  TextureShaderProgram.java  VertexArray.java
app/src/main/java/com/rangaofei/audioapplication/utils/: ByteBufferUtil.java  ByteUtil.java
app/src/main/java/com/rangaofei/audioapplication/wavformat/: DataChunk.java  FMTChunk.java  RIFFChunk.java
app/src/main/java/com/saka/ndk/: Mp3Encoder.java  OpenSLPlayer.java  OpenSLUtil.java
app/src/main/res/layout/: activity_container.xml  activity_glsurface.xml  activity_main.xml  fragment_gl.xml  fragment_open_slrecord.xml  fragment_pcm.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rangaofei/audioapplication/: ByteBufferUtilTest.java  ExampleUnitTest.java
